<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".activity.MainActivity"
    tools:ignore="Overdraw">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_text_1"
                android:textAlignment="center"
                android:textSize="22sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_text_2"
                android:textAlignment="center"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="5dp">

                <android.support.v7.widget.CardView
                    android:id="@+id/cv_xa_main"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    app:cardBackgroundColor="@color/colorAccent"
                    app:cardCornerRadius="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:text="@string/main_text_xa"
                        android:textAlignment="center"
                        android:textColor="@android:color/white"
                        android:textSize="40sp" />

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/cv_xb_main"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    app:cardBackgroundColor="@color/colorAccent"
                    app:cardCornerRadius="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:text="@string/main_text_xb"
                        android:textAlignment="center"
                        android:textColor="@android:color/white"
                        android:textSize="40sp" />

                </android.support.v7.widget.CardView>

            </LinearLayout>

            <TextView
                android:id="@+id/tv_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_text_3"
                android:textAlignment="center" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>